# linear-tui

./: .gitignore  Cargo.toml  go.mod  go.sum  schema.graphql
cmd/linear-tui/: main.go
fixtures/: dans-donuts.json
internal/api/: client.go  models.go
internal/tui/: app.go  styles.go
src/: lib.rs  main.rs  store.rs
src/api/: client.rs  error.rs  fixture.rs  mod.rs  model.rs  models.rs
src/api/client/: map.rs  mod.rs
src/api/model/: custom_view.rs  issue.rs  mod.rs  notification.rs  request.rs  scalar.rs  user.rs
src/api/queries/: actions.rs  custom_views.rs  issue.rs  mod.rs  my_issues.rs  notifications.rs  scalars.rs  search.rs  team_issues.rs  teams.rs  viewer.rs
src/tui/: action.rs  app.rs  display.rs  events.rs  focus.rs  issue_ref.rs  layout.rs  markdown.rs  message.rs  mod.rs  navigation.rs  overlay.rs  platform.rs  render.rs  run.rs  saved_views.rs  spinner.rs  status.rs  update.rs  view.rs
tests/: keymap.rs  logic.rs  render.rs
tests/snapshots/: render__active_search_bar.snap  render__assign_picker_overlay.snap  render__assigned_to_me_view.snap  render__comment_editor_overlay.snap  render__comments_mode_scrolls_the_selected_comment_to_the_top.snap  render__confirm_dialog.snap  render__go_prefix_overlay.snap  render__help_overlay.snap  render__in_progress_view.snap  render__inbox_view.snap  render__issue_detail.snap  render__jump_input_overlay.snap  render__loading_placeholder.snap  render__local_find_bar.snap  render__mention_autocomplete_popup.snap  render__saved_views_list.snap  render__search_results_overlay.snap  render__status_picker_overlay.snap  render__stub_panel_focused_expands.snap  render__threaded_comments_and_timestamps.snap  render__view_grouped_by_priority.snap  render__view_in_right_pane.snap  render__view_zoomed.snap
(+16 files in other folders)
