[package]
name = "linear-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
cynic = { version = "3.7", features = ["http-reqwest"] }
async-trait = "0.1"
futures = "0.3"
pulldown-cmark = { version = "0.13.4", default-features = false }

[dev-dependencies]
insta = "1"
