[package]
name = "linear-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0"
crossterm = { version = "0", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0", features = ["json"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cynic = { version = "3", features = ["http-reqwest"] }
async-trait = "0"
futures = "0"
pulldown-cmark = { version = "0", default-features = false }
chrono = { version = "0", default-features = false, features = ["std"] }
thiserror = "2"

[dev-dependencies]
insta = "1"
